# resolve-toolkits

./: .gitignore  LICENSE  LICENSE.md  README.md  README.txt  TODO.md  notes.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  tmp.ipynb
Examples/: 10_handle_media_pool_clip_markers.lua  1_sorted_timeline_from_folder.lua  8_slack_notification_by_render_job.py  9_export_timeline.py  quick-import.py  test.ipynb  test.py  tmp.ipynb
resolve-toolkits/: proxy.py
resolve_api_samples/Examples/: 10_handle_media_pool_clip_markers.py  1_sorted_timeline_from_folder.py  3_grade_and_render_all_timelines.py  5_get_project_information.lua  5_get_project_information.py  7_add_subclips_to_timeline.py  9_export_timeline.lua
src/: batch_mount_smbfs.py  batch_rename_to_target.py  dailies.py  dummy_dirs.py  extract_metadata.py  get_dctl_node.py  get_project_id.py  get_remote_version.py  grab_blue_markers.py  grab_markers.py  main.py  modification_time.py  proxy.py  qc.py  quick-import-tmp.ipynb  quick-import.py  remove_non-video_items.py  remove_non_video_items.py  remove_trailing_char_for_stills.py  render_exr.py  render_exr_chatgpt.py  resolve.py  resolve_utils.py  rsync.py  search_xml.py  sgamut3_or_cine_gemini.py  side_by_side.py  source_proxy_num_checker.py  tmp.ipynb
src/deprecated/: batch_mount_smbfs.py  batch_rename_to_target.py  dailies.py  dummy_dirs.py  get_dctl_node.py  modification_time.py  qc.py  remove_trailing_char_for_stills.py  search_xml.py
src/resolve-toolkits/: proxy.py  qc.py  resolve.py
tests/: test_extract_metadata.py  test_pymediainfo.py
(+9 files in other folders)
