[project]
name = "resolve-toolkits"
version = "0.0.1"
description = "DaVinci Resolve scripts, for my personal usage, and some legacy scripts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dftt-timecode>=0.0.14",
    "pymediainfo>=7.0.1",
 "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resolve-toolkits"]
